--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <title>Your Dream Car list</title>
+    <style>
+      li a {
+        display: none;
+        padding-left: 10px;
+      }
+
+      li:hover a {
+        display: inline;
+      }
+
+      .no-cars {
+        padding: 15px;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <h1>Your Dream Car List</h1>
       <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-4">
           <h3>Choose Your Cars</h3>
           <div class="form-group">
             <select class="form-control" title="Choose a Dream Car">
@@ -17,9 +31,9 @@
           </div>
           <button type="button" class="btn btn-primary">Add To List</button>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-4">
           <h3>Your Dream Cars</h3>
-          <p class="instructions">Click on a car to remove from your list</p>
+          <p class='bg-info no-cars'>No cars in your list. Add one!</p>
           <ul>
           </ul>
         </div> 
